--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -44,11 +44,9 @@
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
                         </svg>
                         {% with total_qty=cart|length %}
-                            {% if total_qty > 0 %}
-                                <div id="basket-qty" class="d-inline-flex" style="width: 26px; height: 26px; font-size: 8pt; justify-content: center; align-items: center; background-color: #f5a302; color: #fff; border-radius: 50%; border: 2px solid #eaeaea;">
-                                    {{ total_qty }}
-                                </div>
-                            {% endif %}
+                            <div id="cart-qty" class="d-inline-flex" style="width: 26px; height: 26px; font-size: 8pt; justify-content: center; align-items: center; background-color: #f5a302; color: #fff; border-radius: 50%; border: 2px solid #eaeaea;">
+                                {{ total_qty }}
+                            </div>
                         {% endwith %}
                     </a>
                 </div>
