--- a/templates/store/products/category.html
+++ b/templates/store/products/category.html
@@ -27,7 +27,7 @@
                             <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted">Rp. <font style="font-weight: bold; font-size: 16px;">{{ product.price }}</font></small>
+                            <small class="text-muted">Rp. <font style="font-weight: bold; font-size: 16px;">{% load humanize %} {{ product.price|intcomma }}</font></small>
                         </div>
                     </div>
                 </div>
