--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -12,7 +12,7 @@
                 <h1 class="h1 fw-bold">Search, Read, Buy, Review</h1>
                 <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
                 <p>
-                    <a href="#" class="btn btn-primary my-2">Make an account</a>
+                    <a href="{% url 'account:register' %}" class="btn btn-primary my-2">Make an account</a>
                 </p>
             </div>
         </div>
