--- a/templates/account/auth/register.html
+++ b/templates/account/auth/register.html
@@ -24,9 +24,9 @@
                     <h3 class="mb-2 font-weight-bold">Create an account</h3>
                     <p class="mb-4">It's free and only takes a minute.</p>
                     
-                    {% if form.errors %}
+                    {% if registerForm.errors %}
                         <p>Please correct the following errors:</p>
-                        {% for field in form %}
+                        {% for field in registerForm %}
                             {% if field.errors %}
                                 <div class="alert alert-primary" role="alert">
                                     {{ field.label }}: {{ field.errors|striptags }}
@@ -36,29 +36,29 @@
                     {% endif %}
                     
                     <label>
-                        {{ form.user_name.label }}
+                        {{ registerForm.user_name.label }}
                         <span class="text-muted small">(Required)</span>
                     </label>
-                    {{ form.user_name }}
+                    {{ registerForm.user_name }}
                     
                     <label>
-                        {{ form.email.label}}
+                        {{ registerForm.email.label}}
                         <span class="text-muted small">(Required)</span>
                     </label>
-                    {{ form.email }}
+                    {{ registerForm.email }}
                     
                     <label>
-                        {{ form.password.label}}
+                        {{ registerForm.password.label}}
                         <span class="text-muted mb-4">&nbsp;</span>
                     </label>
                     <small class="form-text text-muted mb-4 small">At least 8 characters and 1 digit</small>
-                    {{ form.password }}
+                    {{ registerForm.password }}
                     
                     <label>
-                        {{ form.confirm_password.label}}
+                        {{ registerForm.confirm_password.label}}
                         <span class="text-muted small">(Required)</span>
                     </label>
-                    {{ form.confirm_password }}
+                    {{ registerForm.confirm_password }}
                     
                     <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw500 w-100" type="submit">Register</button>
                     <p class="text-center">
