--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="container">
         <div class="col-12">
-            <h1 class="h2">Your Dashboard</h1>
+            <font class="h2">Dashboard</font> <font class="h4">[ {{ user.full_name }} ]</font>
         </div>
         <div class="col-12 d-flex justify-content-between">
             <div>Manage your <b>orders</b> and personal details</div>
