--- a/templates/account/auth/register.html
+++ b/templates/account/auth/register.html
@@ -24,41 +24,32 @@
                     <h3 class="mb-2 font-weight-bold">Create an account</h3>
                     <p class="mb-4">It's free and only takes a minute.</p>
                     
-                    {% if registerForm.errors %}
-                        <p>Please correct the following errors:</p>
-                        {% for field in registerForm %}
-                            {% if field.errors %}
-                                <div class="alert alert-primary" role="alert">
-                                    {{ field.label }}: {{ field.errors|striptags }}
-                                </div>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
+                    {% include 'core/validation-errors.html' %}
                     
                     <label>
-                        {{ registerForm.user_name.label }}
+                        {{ form.user_name.label }}
                         <span class="text-muted small">(Required)</span>
                     </label>
-                    {{ registerForm.user_name }}
+                    {{ form.user_name }}
                     
                     <label>
-                        {{ registerForm.email.label}}
+                        {{ form.email.label}}
                         <span class="text-muted small">(Required)</span>
                     </label>
-                    {{ registerForm.email }}
+                    {{ form.email }}
                     
                     <label>
-                        {{ registerForm.password.label}}
+                        {{ form.password.label}}
                         <span class="text-muted mb-4">&nbsp;</span>
                     </label>
                     <small class="form-text text-muted mb-4 small">At least 8 characters and 1 digit</small>
-                    {{ registerForm.password }}
+                    {{ form.password }}
                     
                     <label>
-                        {{ registerForm.confirm_password.label}}
+                        {{ form.confirm_password.label}}
                         <span class="text-muted small">(Required)</span>
                     </label>
-                    {{ registerForm.confirm_password }}
+                    {{ form.confirm_password }}
                     
                     <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw500 w-100" type="submit">Register</button>
                     <p class="text-center">
