--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -26,6 +26,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        {% if user.is_authenticated %}
+                            <li class="nav-item active">
+                                <a class="nav-link" aria-current="page" href="{% url 'account:dashboard' %}">Dashboard</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,6 +47,16 @@
                     </ul>
                     
                     {% if user.is_authenticated %}
+                        
+                        <a type="button" role="button" href="{% url "account:edit" %}" class="btn btn-outline-secondary border-0 basket-btn">
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                                </svg>
+                            </div>
+                            <span class="fs15 fw500">Hi, {{ user.user_name }}</span>
+                        </a>
+                        
                         <a type="button" role="button" href="{% url "account:logout" %}" class="btn btn-outline-secondary border-0 basket-btn">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
@@ -51,6 +66,21 @@
                             </div>
                             <span class="fs15 fw500">Logout</span>
                         </a>
+                        
+                        <a type="button" role="button" href="{% url 'cart:cart_summary' %}" class="btn btn-outline-secondary border-0 basket-btn">
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                </svg>
+                                {% with total_qty=cart|length %}
+                                    <div id="cart-qty" class="d-inline-flex" style="width: 22px; height: 22px; font-size: 7pt; justify-content: center; align-items: center; background-color: #f5a302; color: #fff; border-radius: 50%; border: 2px solid #eaeaea; margin-left: -10px; position: absolute;">
+                                        {{ total_qty }}
+                                    </div>
+                                {% endwith %}
+                            </div>
+                            <span span class="fs15 fw500">Cart</span>
+                        </a>
+                        
                     {% else %}
                         <a type="button" role="button" href="{% url "account:login" %}" class="btn btn-outline-secondary border-0 basket-btn">
                             <div>
@@ -63,28 +93,6 @@
                         </a>
                     {% endif %}
                     
-                    <a type="button" role="button" href="{% url "account:dashboard" %}" class="btn btn-outline-secondary border-0 basket-btn">
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                            </svg>
-                        </div>
-                        <span class="fs15 fw500">Account</span>
-                    </a>
-                    
-                    <a type="button" role="button" href="{% url 'cart:cart_summary' %}" class="btn btn-outline-secondary border-0 basket-btn">
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                            </svg>
-                            {% with total_qty=cart|length %}
-                                <div id="cart-qty" class="d-inline-flex" style="width: 22px; height: 22px; font-size: 7pt; justify-content: center; align-items: center; background-color: #f5a302; color: #fff; border-radius: 50%; border: 2px solid #eaeaea; margin-left: -10px; position: absolute;">
-                                    {{ total_qty }}
-                                </div>
-                            {% endwith %}
-                        </div>
-                        <span span class="fs15 fw500">Cart</span>
-                    </a>
                 </div>
             </div>
         </nav>
