update custom auth login
Signed-off-by: maulana saputra <maulana.saputra@aqi.co.id>

--- a/templates/account/auth/login.html
+++ b/templates/account/auth/login.html
@@ -28,9 +28,9 @@
                     
                     {% include 'core/validation-errors.html' %}
                     
-                    {{ form.username.errors }}
-                    <label class="form-label">{{ form.username.label }}</label>
-                    {{ form.username }}
+                    {{ form.email.errors }}
+                    <label class="form-label">{{ form.email.label }}</label>
+                    {{ form.email }}
                     
                     {{ form.password.errors }}
                     <label class="form-label">{{ form.password.label }}</label>
