--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
 </head>
 
 <body style="font-size: 10pt;">
@@ -48,16 +49,31 @@
                     
                     {% if user.is_authenticated %}
                         
-                        <a type="button" role="button" href="{% url "account:edit" %}" class="btn btn-outline-secondary border-0 basket-btn">
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                                </svg>
-                            </div>
-                            <span class="fs15 fw500">Hi, {{ user.user_name }}</span>
-                        </a>
+                        <ul class="navbar-nav mb-2 mb-md-0">
+                            <li class="nav-item dropdown">
+                                <a type="button" role="button" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="btn btn-outline-secondary border-0 basket-btn">
+                                    <div>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                                            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                                        </svg>
+                                    </div>
+                                    <span class="fs15 fw500">Hi, {{ user.user_name }}</span>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'account:edit' %}">account</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'chat:home' %}">chat</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'account:logout' %}">logout</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                         
-                        <a type="button" role="button" href="{% url "account:logout" %}" class="btn btn-outline-secondary border-0 basket-btn">
+                        <!--a type="button" role="button" href="{% url "account:logout" %}" class="btn btn-outline-secondary border-0 basket-btn">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
                                     <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z" />
@@ -65,7 +81,7 @@
                                 </svg>
                             </div>
                             <span class="fs15 fw500">Logout</span>
-                        </a>
+                        </a-->
                         
                         <a type="button" role="button" href="{% url 'cart:cart_summary' %}" class="btn btn-outline-secondary border-0 basket-btn">
                             <div>
