--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -64,7 +64,7 @@
                                         <a class="dropdown-item" href="{% url 'account:edit' %}">account</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="{% url 'chat:home' %}">chat</a>
+                                        <a class="dropdown-item" href="{% url 'chat:inbox' %}">inbox</a>
                                     </li>
                                     <li>
                                         <a class="dropdown-item" href="{% url 'account:logout' %}">logout</a>
