--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -57,14 +57,22 @@
                                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
                                         </svg>
                                     </div>
-                                    <span class="fs15 fw500">Hi, {{ user.user_name }}</span>
+                                    {% if user.shop %}
+                                        <span class="fs15 fw500">Hi, {{ user.shop.title }}</span>
+                                    {% else %}
+                                        <span class="fs15 fw500">Hi, {{ user.user_name }}</span>
+                                    {% endif %}
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li>
                                         <a class="dropdown-item" href="{% url 'account:edit' %}">account</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="{% url 'chat:inbox' %}">inbox</a>
+                                        {% if user.shop %}
+                                            <a class="dropdown-item" href="{% url 'chat:inbox' %}">chat</a>
+                                        {% else %}
+                                            <a class="dropdown-item" href="{% url 'chat:sent' %}">chat</a>
+                                        {% endif %}
                                     </li>
                                     <li>
                                         <a class="dropdown-item" href="{% url 'account:logout' %}">logout</a>
