--- a/templates/store/products/detail.html
+++ b/templates/store/products/detail.html
@@ -19,14 +19,14 @@
             </div>
             <div class="col-md-8 col-lg-8 ps-md-3 ps-lg-5">
                 <h1 class="mb-0 h4">{{ product.title }}</h1>
-                <p><span class="lead">{{ product.author }}</span></p>
+                <p><!--span class="lead">{{ product.author }}</span--></p>
                 <!--p>{{ product.description|slice:":355" }}...</p-->
                 <div class="col-md-12" style="margin-bottom: 15px;">
                     <div class="row">
                         <div class="col-12" class="float-left">
                             <div class="justify-content-center">
-                                <div class="avatar" style="background-image: url('/media/{{product.created_by.shop.image}}'); background-size: cover; height: 50px; width: 50px; padding: 10px; border-radius: 50px;"></div>
-                                {{ product.created_by.shop.title }}
+                                <div class="avatar" style="background-image: url('/media/{{product.shop.image}}'); background-size: cover; height: 50px; width: 50px; padding: 10px; border-radius: 50px;"></div>
+                                {{ product.shop.title }}
                             </div>
                         </div>
                     </div>
