--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -41,9 +41,10 @@
             </div>
         </div>
     </div>
+    
     <script>
-        let sessionKey = '{{ request.session.session_key }}';
-        let currentUser = '{{ request.user.user_name }}';  
+        var sessionKey = '{{ request.session.session_key }}';
+        var currentUser = '{{ request.user.user_name }}';  
     </script>
-    <script src="../static/js/app.js"></script>
+    <script src="../static/js/chat-home.js"></script>
 {% endblock %}
