--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,3 +99,14 @@
     font-size: 18px;
     font-weight: 300;
 }
+
+.shop-label {
+    display: inline-block;
+    padding: 2px 3px 2px 3px;
+    background-color: #f38051;
+    color: #ffffff;
+    border-radius: 5px;
+    margin: 3px;
+    font-size: 10px;
+    font-weight: bold;
+}
