--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -15,7 +15,7 @@
                     </a>
                     {% for user in users %}
                         {% if user.shop %}
-                            <a class="list-group-item user" id="{{ user.user_name }}">{{ user.shop.title }} (shop)</a>
+                            <a class="list-group-item user" id="{{ user.user_name }}">{{ user.shop.title }} <div class="shop-label">shop</div></a>
                         {% else %}
                             <a class="list-group-item user" id="{{ user.user_name }}">{{ user.user_name }}</a>
                         {% endif %}
