--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,3 +110,77 @@
     font-size: 10px;
     font-weight: bold;
 }
+
+.chat-button {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    color: #f5a302;
+    box-shadow: #b5bbc5 0px 2px 6px 0px;
+    border-radius: 20px;
+    font-weight: bold;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.chat-box {
+    height: 450px;
+    width: 400px;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: #b5bbc5 0px 2px 30px 0px;
+}
+
+.chat-box .chat-message {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    position: relative;
+}
+
+.chat-box .chat-message .chat-message-header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    min-height: 56px;
+    z-index: 100;
+    align-items: center;
+    height: 56px;
+    padding: 10px;
+    box-shadow: rgb(0 0 0 / 5%) 0px 2px 4px 0px;
+}
+
+.chat-box .chat-message .chat-message-header .chat-header-name {
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-start;
+    margin-left: 8px;
+    width: calc(100% - 164px);
+    cursor: pointer;
+}
+
+.chat-box .chat-message .chat-message-header .chat-header-close {
+    display: flex;
+    flex: 0 0 auto;
+    cursor: pointer;
+}
+
+.chat-box .chat-message .chat-message-content {
+    position: relative;
+    flex-grow: 1;
+    padding: 0px 16px;
+    overflow-y: auto;
+    overscroll-behavior-y: contain;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.chat-box .chat-message .chat-message-board {
+    display: flex;
+    box-shadow: rgb(0 0 0 / 8%) 0px -1px 2px 0px;
+    padding: 10px 16px;
+    align-items: flex-end;
+}
