--- a/templates/account/auth/register.html
+++ b/templates/account/auth/register.html
@@ -46,10 +46,10 @@
                     {{ form.password }}
                     
                     <label>
-                        {{ form.confirm_password.label}}
+                        {{ form.password2.label}}
                         <span class="text-muted small">(Required)</span>
                     </label>
-                    {{ form.confirm_password }}
+                    {{ form.password2 }}
                     
                     <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw500 w-100" type="submit">Register</button>
                     <p class="text-center">
